--- a/sass/index.scss
+++ b/sass/index.scss
@@ -17,3 +17,7 @@
 @import './modules/_loading.scss';
 @import './modules/_signUp.scss';
 // rwd
+@import './respond/_headerMedium.scss';
+@import './respond/_headerSmall.scss';
+@import './respond/_indexMedium.scss';
+@import './respond/_indexSmall.scss';
