--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -220,7 +220,7 @@ footer span {
   padding: 10px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
@@ -326,6 +326,75 @@ header .icons a {
 header .icons a:hover {
   transform: scale(1.15);
   transition: .3s;
+}
+
+.hb {
+  position: fixed;
+  z-index: 999999999;
+  background-color: rgba(238, 237, 237, 0.808);
+  padding: 2px 5px;
+  border-radius: 5px;
+  display: none;
+  top: 30px;
+  right: 30px;
+}
+
+header.active {
+  top: 0;
+  transition: .6s;
+}
+
+.hamburger .line {
+  width: 40px;
+  height: 4px;
+  background-color: #2c3e50;
+  display: block;
+  margin: 8px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+#hamburger-6.is-active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#hamburger-6.is-active .line:nth-child(2) {
+  width: 0px;
+}
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+#hamburger-6.is-active .line:nth-child(1) {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px);
+}
+
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transform: translateY(-14px) rotate(90deg);
+  -ms-transform: translateY(-14px) rotate(90deg);
+  -o-transform: translateY(-14px) rotate(90deg);
+  transform: translateY(-14px) rotate(90deg);
 }
 
 .defaultBtn {
@@ -466,7 +535,7 @@ header .icons a:hover {
   background-repeat: no-repeat;
 }
 
-.signUpLightbox .formShape {
+.signUpLightbox #formShape {
   background-color: #91989f;
   width: 400px;
   height: 600px;
@@ -475,15 +544,15 @@ header .icons a:hover {
   position: relative;
 }
 
-.signUpLightbox .formShape .chioce {
+.signUpLightbox #formShape .chioce {
   text-align: center;
 }
 
-.signUpLightbox .formShape .chioce:last-child {
+.signUpLightbox #formShape .chioce:last-child {
   margin-top: 20px;
 }
 
-.signUpLightbox .formShape .chioce button {
+.signUpLightbox #formShape .chioce button {
   background-color: transparent;
   border: none;
   display: inline-block;
@@ -495,39 +564,39 @@ header .icons a:hover {
   cursor: pointer;
 }
 
-.signUpLightbox .formShape .chioce button:hover {
+.signUpLightbox #formShape .chioce button:hover {
   color: #fff;
 }
 
-.signUpLightbox .formShape .chioce .selected {
+.signUpLightbox #formShape .chioce .selected {
   border-bottom: 1px solid #eaaf88;
   color: #fff;
 }
 
-.signUpLightbox .formShape form {
-  padding: 50px;
+.signUpLightbox #formShape form {
+  padding: 10px 50px;
   margin: 0 auto;
   color: #fff;
   font-family: '../fonts/NotoSansCJKtc-Thin.otf';
 }
 
-.signUpLightbox .formShape form label {
+.signUpLightbox #formShape form label {
   margin-top: 10px;
   margin-bottom: 4px;
   display: block;
   font-size: 18px;
 }
 
-.signUpLightbox .formShape form label:first-child {
+.signUpLightbox #formShape form label:first-child {
   margin-top: 0;
 }
 
-.signUpLightbox .formShape form label small {
+.signUpLightbox #formShape form label small {
   font-size: 12px;
   color: rgba(245, 245, 245, 0.7);
 }
 
-.signUpLightbox .formShape form .formBtn {
+.signUpLightbox #formShape form .formBtn {
   width: 240px;
   border: 1px solid #333;
   display: block;
@@ -540,20 +609,20 @@ header .icons a:hover {
   margin: 0 auto 30px;
 }
 
-.signUpLightbox .formShape form .formBtn:hover {
+.signUpLightbox #formShape form .formBtn:hover {
   background-color: #eaaf88;
   border: 1px solid #eaaf88;
   color: #fff;
 }
 
-.signUpLightbox .formShape form input {
+.signUpLightbox #formShape form input {
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
 }
 
-.signUpLightbox .formShape form input:-ms-input-placeholder {
+.signUpLightbox #formShape form input:-ms-input-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -561,7 +630,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input:-moz-placeholder {
+.signUpLightbox #formShape form input:-moz-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -569,7 +638,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input::-moz-placeholder {
+.signUpLightbox #formShape form input::-moz-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -577,7 +646,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input::-webkit-input-placeholder {
+.signUpLightbox #formShape form input::-webkit-input-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -585,24 +654,44 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form #userPhoto {
+.signUpLightbox #formShape form #userPhoto {
   display: none;
 }
 
-.signUpLightbox .formShape form .formSubmitBtn {
+.signUpLightbox #formShape form .formSubmitBtn {
   display: inline-block;
   width: 100px;
   font-size: 14px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+.signUpLightbox #formShape .signInUpPos {
+  width: 170px;
+  position: absolute;
+  left: 50%;
+  margin-left: -85px;
+  bottom: 14px;
+  color: #eee;
+  font-size: 12px;
+}
+
+.signUpLightbox #formShape .signInUpPos button {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  color: #eee;
+  border-bottom: #eee 1px solid;
+  cursor: pointer;
+  outline: none;
+}
+
+@media all and (max-width: 991px) {
   .signUpLightbox .bgImg {
     display: none;
     visibility: hidden;
     width: 0;
     height: 0;
   }
-  .signUpLightbox .formShape {
+  .signUpLightbox #formShape {
     border-radius: 10px;
   }
 }
@@ -614,18 +703,18 @@ header .icons a:hover {
     width: 0;
     height: 0;
   }
-  .signUpLightbox .formShape {
+  .signUpLightbox #formShape {
     width: 300px;
     border-radius: 10px;
   }
-  .signUpLightbox .formShape .chioce button {
+  .signUpLightbox #formShape .chioce button {
     font-size: 14px;
   }
-  .signUpLightbox .formShape form .formBtn {
+  .signUpLightbox #formShape form .formBtn {
     width: 180px;
     font-size: 14px;
   }
-  .signUpLightbox .formShape form .formSubmitBtn {
+  .signUpLightbox #formShape form .formSubmitBtn {
     display: inline-block;
     width: 80px;
     font-size: 14px;
@@ -1028,7 +1117,7 @@ body {
   }
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   header {
     display: none;
   }
