--- a/css/footer.css
+++ b/css/footer.css
@@ -220,7 +220,7 @@ footer span {
   padding: 10px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
@@ -238,7 +238,7 @@ footer span {
   }
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
