--- a/css/index.css
+++ b/css/index.css
@@ -314,7 +314,7 @@ footer span {
   padding: 10px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
@@ -422,6 +422,75 @@ header .icons a:hover {
   transition: .3s;
 }
 
+.hb {
+  position: fixed;
+  z-index: 999999999;
+  background-color: rgba(238, 237, 237, 0.808);
+  padding: 2px 5px;
+  border-radius: 5px;
+  display: none;
+  top: 30px;
+  right: 30px;
+}
+
+header.active {
+  top: 0;
+  transition: .6s;
+}
+
+.hamburger .line {
+  width: 40px;
+  height: 4px;
+  background-color: #2c3e50;
+  display: block;
+  margin: 8px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+#hamburger-6.is-active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#hamburger-6.is-active .line:nth-child(2) {
+  width: 0px;
+}
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+#hamburger-6.is-active .line:nth-child(1) {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px);
+}
+
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transform: translateY(-14px) rotate(90deg);
+  -ms-transform: translateY(-14px) rotate(90deg);
+  -o-transform: translateY(-14px) rotate(90deg);
+  transform: translateY(-14px) rotate(90deg);
+}
+
 .pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2, .game-point h2 {
   font-size: 18px;
   color: #fff;
@@ -458,10 +527,17 @@ header .icons a:hover {
   background-image: url(../images/AdobeStock_112482963.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: left center;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
+}
+
+.banner .findBox, .banner .waitBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner .find, .banner .wait {
@@ -502,6 +578,11 @@ header .icons a:hover {
   cursor: pointer;
 }
 
+.banner .search .go {
+  display: inline-block;
+  position: relative;
+}
+
 .banner .search input {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -530,7 +611,32 @@ header .icons a:hover {
   color: #fff;
   position: absolute;
   right: 10px;
-  top: 30px;
+  top: 28px;
+}
+
+@keyframes scrollDown {
+  to {
+    opacity: .3;
+    top: 30px;
+  }
+}
+
+.scroll-down {
+  text-align: center;
+  margin: 10px auto;
+  line-height: 36px;
+}
+
+.scroll-down i {
+  top: 0;
+  position: relative;
+  animation: scrollDown 1.2s ease-out infinite;
+  color: #fff;
+  text-decoration: none;
+}
+
+.scroll-down small {
+  font-size: 14px;
 }
 
 .pick-kit {
@@ -560,7 +666,7 @@ header .icons a:hover {
 }
 
 .pick-kit ul li {
-  width: 28%;
+  width: 16%;
   float: left;
 }
 
@@ -810,8 +916,9 @@ header .icons a:hover {
 
 .game-point {
   height: 100vh;
-  background-color: #EAAF88;
-  box-shadow: 20px 20px #333 inset, -20px -20px #333 inset;
+  background-image: url(../images/bgimg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .game-point .game-point-title {
@@ -830,48 +937,40 @@ header .icons a:hover {
   width: 80%;
   margin: auto;
   height: 30vh;
-  border-bottom: 3px solid #fff;
   position: relative;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
   padding-right: 60px;
 }
 
-.game-point .game-point-top .askBox {
-  position: relative;
-  height: 30vh;
+.game-point .game-point-top .game-qty-box {
+  width: 123px;
+  height: 90px;
+  background-image: url(../../images/cloud_no.png);
+  background-repeat: no-repeat;
+  background-size: contain;
   display: flex;
-  padding: 50px;
   justify-content: center;
   align-items: center;
-  border: 3px solid #fff;
-  border-radius: 20% 60% 30% 60%;
-  background-color: #EAAF88;
-  bottom: 20px;
+  margin-right: 20px;
+  font-family: notoSans_r;
 }
 
-.game-point .game-point-top .askBox:after {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-radius: 60% 40% 50% 60%;
-  border: 3px solid #fff;
-  right: -40px;
-  top: 50%;
+.game-point .game-point-top .game-qty-box #game-qty::first-letter {
+  font-size: 24px;
 }
 
-.game-point .game-point-top .askBox:before {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 13px;
-  height: 13px;
-  border-radius: 60% 40% 50% 60%;
-  border: 3px solid #fff;
-  right: -55px;
-  top: 35%;
+.game-point .game-point-top .askBox {
+  width: 319px;
+  height: 133px;
+  background-image: url(../images/cloud_question.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: notoSans_r;
 }
 
 .game-point .game-point-top .cat-ask {
@@ -893,30 +992,87 @@ header .icons a:hover {
   padding-bottom: 20px;
 }
 
-.game-point .game-point-bottom .people {
-  position: relative;
-  z-index: 2;
-  width: 100px;
-  height: 105px;
-  left: 0;
+.game-point .game-point-bottom .hint-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #effafc;
+  border: 2px solid #000;
+  z-index: 0;
+  transition: .3s;
+  opacity: 0;
+  border-radius: 10px;
 }
 
-.game-point .game-point-bottom #optionA,
-.game-point .game-point-bottom #optionB {
+.game-point .game-point-bottom .hint-box .hint {
+  width: 80%;
+  border: 2px #000 solid;
+  background-color: #f8e4e3;
+  border-radius: 10px;
+  padding: 15px 45px;
+  line-height: 30px;
+}
+
+.game-point .game-point-bottom .hint-box button {
+  background-color: #e46d69;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 10px;
+  border: 2px solid #000;
+  cursor: pointer;
+  position: relative;
+  top: -10px;
+}
+
+.game-point .game-point-bottom .option-area-a, .game-point .game-point-bottom .option-area-b,
+.game-point .game-point-bottom .option-area-b {
   align-self: flex-start;
-  width: 30%;
-  height: 250px;
+  width: 15%;
+  padding-bottom: 15%;
+  border-radius: 50%;
   position: relative;
   background-color: #369;
   text-align: center;
+  cursor: pointer;
+}
+
+.game-point .game-point-bottom .option-area-a:hover, .game-point .game-point-bottom .option-area-b:hover,
+.game-point .game-point-bottom .option-area-b:hover {
+  transition: .3s;
+}
+
+.game-point .game-point-bottom .option-area-a, .game-point .game-point-bottom .option-area-b {
+  background-image: url(../images/yes.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.game-point .game-point-bottom .option-area-b {
+  background-image: url(../images/no.png);
+}
+
+.game-point .game-point-bottom .people {
+  position: relative;
+  z-index: 2;
+  width: 70px;
+  height: 108x;
+  left: 0;
+  bottom: 60px;
+  transition: .3s;
 }
 
 .game-point .game-point-bottom .hug {
   position: relative;
-  width: 50px;
-  height: 90px;
+  width: 80px;
+  height: 102px;
   z-index: 1;
   right: 0;
+  bottom: 60px;
+  transition: .3s ease-in-out;
 }
 
 #loading {
@@ -973,7 +1129,7 @@ header .icons a:hover {
   background-repeat: no-repeat;
 }
 
-.signUpLightbox .formShape {
+.signUpLightbox #formShape {
   background-color: #91989f;
   width: 400px;
   height: 600px;
@@ -982,15 +1138,15 @@ header .icons a:hover {
   position: relative;
 }
 
-.signUpLightbox .formShape .chioce {
+.signUpLightbox #formShape .chioce {
   text-align: center;
 }
 
-.signUpLightbox .formShape .chioce:last-child {
+.signUpLightbox #formShape .chioce:last-child {
   margin-top: 20px;
 }
 
-.signUpLightbox .formShape .chioce button {
+.signUpLightbox #formShape .chioce button {
   background-color: transparent;
   border: none;
   display: inline-block;
@@ -1002,39 +1158,39 @@ header .icons a:hover {
   cursor: pointer;
 }
 
-.signUpLightbox .formShape .chioce button:hover {
+.signUpLightbox #formShape .chioce button:hover {
   color: #fff;
 }
 
-.signUpLightbox .formShape .chioce .selected {
+.signUpLightbox #formShape .chioce .selected {
   border-bottom: 1px solid #eaaf88;
   color: #fff;
 }
 
-.signUpLightbox .formShape form {
-  padding: 50px;
+.signUpLightbox #formShape form {
+  padding: 10px 50px;
   margin: 0 auto;
   color: #fff;
   font-family: '../fonts/NotoSansCJKtc-Thin.otf';
 }
 
-.signUpLightbox .formShape form label {
+.signUpLightbox #formShape form label {
   margin-top: 10px;
   margin-bottom: 4px;
   display: block;
   font-size: 18px;
 }
 
-.signUpLightbox .formShape form label:first-child {
+.signUpLightbox #formShape form label:first-child {
   margin-top: 0;
 }
 
-.signUpLightbox .formShape form label small {
+.signUpLightbox #formShape form label small {
   font-size: 12px;
   color: rgba(245, 245, 245, 0.7);
 }
 
-.signUpLightbox .formShape form .formBtn {
+.signUpLightbox #formShape form .formBtn {
   width: 240px;
   border: 1px solid #333;
   display: block;
@@ -1047,20 +1203,20 @@ header .icons a:hover {
   margin: 0 auto 30px;
 }
 
-.signUpLightbox .formShape form .formBtn:hover {
+.signUpLightbox #formShape form .formBtn:hover {
   background-color: #eaaf88;
   border: 1px solid #eaaf88;
   color: #fff;
 }
 
-.signUpLightbox .formShape form input {
+.signUpLightbox #formShape form input {
   border: none;
   background-color: transparent;
   border-bottom: 1px solid rgba(245, 245, 245, 0.7);
   width: 100%;
 }
 
-.signUpLightbox .formShape form input:-ms-input-placeholder {
+.signUpLightbox #formShape form input:-ms-input-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -1068,7 +1224,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input:-moz-placeholder {
+.signUpLightbox #formShape form input:-moz-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -1076,7 +1232,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input::-moz-placeholder {
+.signUpLightbox #formShape form input::-moz-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -1084,7 +1240,7 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form input::-webkit-input-placeholder {
+.signUpLightbox #formShape form input::-webkit-input-placeholder {
   line-height: 1em;
   padding: 5px 15px;
   color: rgba(245, 245, 245, 0.7);
@@ -1092,24 +1248,44 @@ header .icons a:hover {
   font-size: 12px;
 }
 
-.signUpLightbox .formShape form #userPhoto {
+.signUpLightbox #formShape form #userPhoto {
   display: none;
 }
 
-.signUpLightbox .formShape form .formSubmitBtn {
+.signUpLightbox #formShape form .formSubmitBtn {
   display: inline-block;
   width: 100px;
   font-size: 14px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+.signUpLightbox #formShape .signInUpPos {
+  width: 170px;
+  position: absolute;
+  left: 50%;
+  margin-left: -85px;
+  bottom: 14px;
+  color: #eee;
+  font-size: 12px;
+}
+
+.signUpLightbox #formShape .signInUpPos button {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  color: #eee;
+  border-bottom: #eee 1px solid;
+  cursor: pointer;
+  outline: none;
+}
+
+@media all and (max-width: 991px) {
   .signUpLightbox .bgImg {
     display: none;
     visibility: hidden;
     width: 0;
     height: 0;
   }
-  .signUpLightbox .formShape {
+  .signUpLightbox #formShape {
     border-radius: 10px;
   }
 }
@@ -1121,21 +1297,81 @@ header .icons a:hover {
     width: 0;
     height: 0;
   }
-  .signUpLightbox .formShape {
+  .signUpLightbox #formShape {
     width: 300px;
     border-radius: 10px;
   }
-  .signUpLightbox .formShape .chioce button {
+  .signUpLightbox #formShape .chioce button {
     font-size: 14px;
   }
-  .signUpLightbox .formShape form .formBtn {
+  .signUpLightbox #formShape form .formBtn {
     width: 180px;
     font-size: 14px;
   }
-  .signUpLightbox .formShape form .formSubmitBtn {
+  .signUpLightbox #formShape form .formSubmitBtn {
     display: inline-block;
     width: 80px;
     font-size: 14px;
+  }
+}
+
+@media all and (max-width: 991px) {
+  header {
+    top: -100%;
+  }
+  .hb {
+    display: block;
+  }
+}
+
+@media all and (max-width: 767px) {
+  header {
+    width: 100%;
+  }
+  .hb {
+    top: 5px;
+    right: 5px;
+  }
+}
+
+@media all and (max-width: 991px) {
+  .margin-200 {
+    margin-left: 0;
+  }
+  .banner .find, .banner .wait {
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
+  .banner .wait {
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
+  .banner .findBox, .banner .waitBox {
+    display: block;
+    text-align: center;
+  }
+  .search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .search select {
+    margin: auto 3px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .container {
+    max-width: 90%;
+  }
+  .banner .search select, .banner .search input {
+    font-size: 16px;
+  }
+  .pick-kit ul {
+    width: 600%;
   }
 }
 
