--- a/css/member.css
+++ b/css/member.css
@@ -172,6 +172,75 @@ header .icons a:hover {
   transition: .3s;
 }
 
+.hb {
+  position: fixed;
+  z-index: 999999999;
+  background-color: rgba(238, 237, 237, 0.808);
+  padding: 2px 5px;
+  border-radius: 5px;
+  display: none;
+  top: 30px;
+  right: 30px;
+}
+
+header.active {
+  top: 0;
+  transition: .6s;
+}
+
+.hamburger .line {
+  width: 40px;
+  height: 4px;
+  background-color: #2c3e50;
+  display: block;
+  margin: 8px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+#hamburger-6.is-active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#hamburger-6.is-active .line:nth-child(2) {
+  width: 0px;
+}
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+#hamburger-6.is-active .line:nth-child(1) {
+  -webkit-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px);
+}
+
+#hamburger-6.is-active .line:nth-child(3) {
+  -webkit-transform: translateY(-14px) rotate(90deg);
+  -ms-transform: translateY(-14px) rotate(90deg);
+  -o-transform: translateY(-14px) rotate(90deg);
+  transform: translateY(-14px) rotate(90deg);
+}
+
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
@@ -221,7 +290,7 @@ footer span {
   padding: 10px;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
@@ -511,7 +580,7 @@ header ul li:nth-child(5):after {
   cursor: pointer;
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   header {
     display: none;
   }
@@ -585,7 +654,7 @@ header ul li:nth-child(5):after {
   }
 }
 
-@media all and (min-width: 768px) and (max-width: 991px) {
+@media all and (max-width: 991px) {
   footer {
     margin-left: 0;
     width: 100%;
