--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -1,4 +1,4 @@
-header{
+header {
     background-color: $navColor;
     width: 200px;
     height: 100vh;
@@ -6,46 +6,45 @@ header{
     padding-left: 15px;
     box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
     z-index: 999;
-    .logo{
+    .logo {
         position: relative;
         top: 70px;
         width: 180px;
         text-align: center;
-        a{
+        a {
             text-decoration: none;
             color: #fff;
         }
-        img{
+        img {
             width: 90%;
         }
     }
-    ul{
+    ul {
         position: absolute;
         bottom: 180px;
-        li{
+        li {
             margin: 1px 0;
             position: relative;
-            &:hover{
+            &:hover {
                 background-color: #fff;
                 box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
                 transition: .3s;
             }
-            &:hover a{
+            &:hover a {
                 color: #000;
                 transition: .3s;
             }
-            a{
+            a {
                 width: 185px;
                 display: block;
-                color:$navFontColor;
+                color: $navFontColor;
                 text-decoration: none;
                 font-size: 18px;
                 padding: 15px 20px;
-            }
-            // @include navNow(nth);  第幾頁就輸入多少(nth)
+            } // @include navNow(nth);  第幾頁就輸入多少(nth)
         }
     }
-    .icons{
+    .icons {
         width: 180px;
         display: flex;
         padding: $gap;
@@ -53,7 +52,7 @@ header{
         justify-content: space-around;
         position: absolute;
         bottom: 40px;
-        #like{
+        #like {
             font-size: $font-size-h6;
             text-align: center;
             line-height: 20px;
@@ -66,8 +65,8 @@ header{
             right: -25px;
             font-family: notoSans_b;
         }
-        a{
-            &:hover{
+        a {
+            &:hover {
                 transform: scale(1.15);
                 transition: .3s;
             }
@@ -75,5 +74,70 @@ header{
             color:#fff;
         }
     }
+}
+.hb{
+    position: fixed;
+    z-index: 999999999;
+    background-color: rgba(238, 237, 237, 0.808);
+    padding: 2px 5px;
+    border-radius: 5px;
+    display: none;
+    top: 30px;
+    right: 30px;
+}
+header.active{
+    top: 0;
+    transition: .6s;
+}
 
+.hamburger .line {
+    width: 40px;
+    height: 4px;
+    background-color: #2c3e50;
+    display: block;
+    margin: 8px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.hamburger:hover {
+    cursor: pointer;
+}
+
+#hamburger-6.is-active {
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition-delay: 0.6s;
+    -o-transition-delay: 0.6s;
+    transition-delay: 0.6s;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+#hamburger-6.is-active .line:nth-child(2) {
+    width: 0px;
+}
+
+#hamburger-6.is-active .line:nth-child(1),
+#hamburger-6.is-active .line:nth-child(3) {
+    -webkit-transition-delay: 0.3s;
+    -o-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+#hamburger-6.is-active .line:nth-child(1) {
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    transform: translateY(10px);
+}
+
+#hamburger-6.is-active .line:nth-child(3) {
+    -webkit-transform: translateY(-14px) rotate(90deg);
+    -ms-transform: translateY(-14px) rotate(90deg);
+    -o-transform: translateY(-14px) rotate(90deg);
+    transform: translateY(-14px) rotate(90deg);
 }
