修改尋喵的部分

--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -196,8 +196,8 @@ body {
                 position: relative;
                 .favorite {
                     position: absolute;
-                    right: 12px;
-                    top: 12px;
+                    left: 14px;
+                    top: 14px;
                     color: rgb(250, 55, 55);
                     font-size: $font-size-h2;
                     z-index: 3;
