--- a/sass/modules/_catContent.scss
+++ b/sass/modules/_catContent.scss
@@ -22,8 +22,8 @@
                 position: relative;
                 .favorite {
                     position: absolute;
-                    top: 10px;
-                    right: 10px;
+                    top: 14px;
+                    left: 14px;
                     color: rgb(250, 55, 55);
                     font-size: $font-size-h2;
                     z-index: 3;
