--- a/css/index.css
+++ b/css/index.css
@@ -496,7 +496,7 @@ header.active {
   .pick-kit .pick-title {
     height: 15vh;
     display: flex;
-    align-items: flex-start; }
+    align-items: center; }
     .pick-kit .pick-title h2 {
       height: 40px;
       line-height: 10px; }
@@ -680,14 +680,15 @@ header.active {
     margin-left: 0; }
 
 .game-point {
-  height: 100vh;
-  background-image: url(../images/bgimg.jpg);
+  height: 90vh;
+  background-image: url(../../images/background_up.png);
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  position: relative; }
   .game-point .game-point-title {
     height: 15vh;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-start; }
   .game-point h2 {
     height: 40px;
@@ -704,26 +705,14 @@ header.active {
     .game-point .game-point-top .game-qty-box {
       width: 123px;
       height: 90px;
-      background-image: url(../../images/cloud_no.png);
-      background-repeat: no-repeat;
-      background-size: contain;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-right: 20px;
-      font-family: notoSans_r; }
+      margin-right: 20px; }
       .game-point .game-point-top .game-qty-box #game-qty::first-letter {
         font-size: 24px; }
     .game-point .game-point-top .askBox {
-      width: 319px;
-      height: 133px;
-      background-image: url(../images/cloud_question.png);
-      background-repeat: no-repeat;
-      background-size: contain;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: notoSans_r; }
+      width: 370px; }
+      .game-point .game-point-top .askBox img {
+        width: 100%;
+        height: 100%; }
     .game-point .game-point-top .cat-ask {
       max-width: 80%;
       max-height: 80%;
@@ -734,11 +723,10 @@ header.active {
     width: 90%;
     margin: auto;
     display: flex;
-    height: 55vh;
+    height: 45vh;
     justify-content: space-between;
     align-items: flex-end;
-    padding-top: 40px;
-    padding-bottom: 20px; }
+    padding-top: 40px; }
     .game-point .game-point-bottom .hint-box {
       display: flex;
       flex-direction: column;
@@ -794,7 +782,7 @@ header.active {
       width: 70px;
       height: 108x;
       left: 0;
-      bottom: 60px;
+      bottom: 0;
       transition: .3s; }
     .game-point .game-point-bottom .hug {
       position: relative;
@@ -802,8 +790,14 @@ header.active {
       height: 102px;
       z-index: 1;
       right: 0;
-      bottom: 60px;
+      bottom: 0;
       transition: .3s ease-in-out; }
+
+.game-point-bgimg {
+  height: 10vh;
+  background-image: url(../../images/background_down.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 #loading {
   position: fixed;
@@ -987,7 +981,7 @@ header.active {
 
 @media all and (max-width: 991px) {
   header {
-    top: -100%; }
+    top: -130%; }
   .hb {
     display: block; } }
 
@@ -1021,6 +1015,10 @@ header.active {
       margin: auto 3px; } }
 
 @media all and (max-width: 767px) {
+  .pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2, .game-point h2 {
+    margin: 0; }
+  .pick-kit .pick-title h3, .half .half-title h3, .shop .shop-title h3, .game-point h3 {
+    margin: 0; }
   .container {
     max-width: 90%; }
   .banner .search select, .banner .search input {
