--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -138,7 +138,7 @@
     .pick-title {
         height: 15vh;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         h2 {
             @extend %h2-btn;
             height: 40px;
@@ -376,14 +376,15 @@
 }
 
 .game-point {
-    height: 100vh;
-    background-image: url(../images/bgimg.jpg);
+    height: 90vh;
+    background-image: url(../../images/background_up.png);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
     .game-point-title {
         height: 15vh;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         justify-content: flex-start;
     }
     h2 {
@@ -406,14 +407,14 @@
         .game-qty-box{
             width: 123px;
             height: 90px;
-            background-image: url(../../images/cloud_no.png);
-            background-repeat: no-repeat;
-            background-size: contain;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            // background-image: url(../../images/cloud_no.png);
+            // background-repeat: no-repeat;
+            // background-size: contain;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
             margin-right: 20px;
-            font-family: notoSans_r;
+            // font-family: notoSans_r;
             #game-qty{
                 &::first-letter{
                     font-size: $font-size-h3;
@@ -421,15 +422,18 @@
             }
         }
         .askBox {
-            width: 319px;
-            height: 133px;
-            background-image: url(../images/cloud_question.png);
-            background-repeat: no-repeat;
-            background-size: contain;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: notoSans_r;
+            width: 370px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+            // background-image: url(../images/cloud_question.png);
+            // background-repeat: no-repeat;
+            // background-size: contain;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            // font-family: notoSans_r;
         }
         // .askBox {
         //     position: relative;
@@ -477,11 +481,10 @@
         width: 90%;
         margin: auto;
         display: flex;
-        height: 55vh;
+        height: 45vh;
         justify-content: space-between;
         align-items: flex-end;
         padding-top: 40px;
-        padding-bottom: 20px;
         .hint-box{
             display: flex;
             flex-direction: column;
@@ -544,7 +547,7 @@
             width: 70px;
             height: 108x;
             left: 0;
-            bottom: 60px;
+            bottom: 0;
             transition: .3s;
         }
         .hug {
@@ -553,8 +556,14 @@
             height: 102px;
             z-index: 1;
             right: 0;
-            bottom: 60px;
+            bottom: 0;
             transition: .3s ease-in-out;
         }
     }
+}
+.game-point-bgimg{
+    height: 10vh;
+    background-image: url(../../images/background_down.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
