--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -72,6 +72,7 @@ $maxWidth: 1024;
 // ----------------------------------------------------------------------
 // Rwd
 // ----------------------------------------------------------------------
+$ssmall: 376px;
 $small: 767px;
 $medium: 768px;
 $medium_max: 991px;
