--- a/sass/index.scss
+++ b/sass/index.scss
@@ -21,3 +21,4 @@
 @import './respond/_headerSmall.scss';
 @import './respond/_indexMedium.scss';
 @import './respond/_indexSmall.scss';
+@import './respond/_indexSsmall.scss';
