--- a/sass/mixins/_rwd.scss
+++ b/sass/mixins/_rwd.scss
@@ -24,4 +24,9 @@
             @content;
         }
     }
+    @else if $breakpoint == "ssmall" {
+        @media all and (max-width: $ssmall) {
+            @content;
+        }
+    }
 }
