--- a/sass/respond/_indexMedium.scss
+++ b/sass/respond/_indexMedium.scss
@@ -27,4 +27,14 @@
             margin: auto 3px;
         }
     }
+    .game-point {
+        .game-point-top {
+            .game-qty-box {
+                width: 80%;
+            }
+            .askBox {
+                width: 260%;
+            }
+        }
+    }
 }
