--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -2,7 +2,6 @@
     %h2-btn {
         margin: 0;
     }
-    
     %h3-btn {
         margin: 0;
     }
@@ -11,24 +10,44 @@
     }
     .banner {
         .search {
-            select,input {
+            select,
+            input {
                 font-size: 16px;
             }
         }
     }
+    .game-point {
+        .game-point-top {
+            display: block;
+            .game-qty-box {
+                width: 40%;
+            }
+            .askBox {
+                width: 130%;
+            }
+        }
+        .game-point-bottom {
+            .option-area-a,
+            .option-area-b {
+                align-self: center;
+                width: 24%;
+                padding-bottom: 24%;
+            }
+        }
+    }
     .pick-kit {
-        ul{
+        ul {
             width: 600%;
         }
     }
-    .half{
-        .half-qty{
+    .half {
+        .half-qty {
             img {
                 width: 30px;
                 height: 41.25px;
                 margin: 0 5px;
             }
-            span{
+            span {
                 align-self: flex-end;
             }
         }
