--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -52,4 +52,22 @@
             }
         }
     }
+    .noticegame {
+        .boxcontainer {
+            width: 100%;
+            margin-top: 50px;
+            #rightbox,
+            #leftbox {
+                width: 45%;
+            }
+        }
+        .imgbox {
+            width: 100%;
+            margin: 0;
+            padding-top: 30px;
+            img {
+                width: 33.333%;
+            }
+        }
+    }
 }
