--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -286,7 +286,7 @@
     }
     .half-text {
         width: 35%;
-        padding: $gap;
+        padding: 10px;
         position: relative;
         a {
             text-decoration: none;
@@ -298,9 +298,6 @@
             }
         }
         .read-more {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
             text-decoration: underline;
         }
         .half-name {
