--- a/css/index.css
+++ b/css/index.css
@@ -605,7 +605,7 @@ header.active {
     background-size: cover; }
   .half .half-text {
     width: 35%;
-    padding: 15px;
+    padding: 10px;
     position: relative; }
     .half .half-text a {
       text-decoration: none;
@@ -615,9 +615,6 @@ header.active {
       .half .half-text a:hover {
         color: #EAAF88; }
     .half .half-text .read-more {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
       text-decoration: underline; }
     .half .half-text .half-name {
       font-family: notoSans_r;
@@ -1076,7 +1073,41 @@ header.active {
   .game-point .game-point-top .game-qty-box {
     width: 80%; }
   .game-point .game-point-top .askBox {
-    width: 260%; } }
+    width: 260%; }
+  .half .half-title {
+    width: 100%;
+    display: inline-block;
+    align-items: center; }
+  .half ul.half-list {
+    width: 300%;
+    position: absolute;
+    top: 15vh;
+    display: flex;
+    left: -100%;
+    height: 70vh; }
+    .half ul.half-list li {
+      width: 100%; }
+      .half ul.half-list li .half-item {
+        height: 100%;
+        flex-direction: column; }
+        .half ul.half-list li .half-item .half-pic {
+          order: -1;
+          width: 100%;
+          height: 35vh; }
+        .half ul.half-list li .half-item .half-qty {
+          width: 100%;
+          height: 10vh; }
+          .half ul.half-list li .half-item .half-qty img {
+            width: 35px;
+            height: 48px; }
+          .half ul.half-list li .half-item .half-qty span {
+            align-self: center; }
+        .half ul.half-list li .half-item .half-text {
+          width: 100%;
+          height: 25vh; }
+          .half ul.half-list li .half-item .half-text .read-more {
+            display: block;
+            text-align: right; } }
 
 @media all and (max-width: 767px) {
   .pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2, .game-point h2, .noticegame .game-point-title h2 {
@@ -1100,17 +1131,18 @@ header.active {
     width: 24%;
     padding-bottom: 24%; }
   .pick-kit ul {
-    width: 600%; }
-  .half .half-qty img {
-    width: 30px;
-    height: 41.25px;
-    margin: 0 5px; }
-  .half .half-qty span {
-    align-self: flex-end; } }
+    width: 600%; } }
 
 @media all and (max-width: 376px) {
   .game-point .game-point-bottom .option-area-a, .game-point .game-point-bottom .option-area-b,
   .game-point .game-point-bottom .option-area-b {
     align-self: flex-start;
     width: 25%;
-    padding-bottom: 25%; } }
+    padding-bottom: 25%; }
+  .game-point .game-point-title {
+    width: 100%;
+    display: inline-block;
+    text-align: center; }
+  .pick-kit .pick-title {
+    width: 100%;
+    display: inline-block; } }
