--- a/sass/respond/_indexMedium.scss
+++ b/sass/respond/_indexMedium.scss
@@ -1,29 +1,29 @@
 @include respond-to(medium) {
-    .margin-200{
+    .margin-200 {
         margin-left: 0;
     }
-    .banner{
-        .find{
+    .banner {
+        .find {
             padding-left: 0;
             padding-right: 0;
             padding-bottom: 0;
         }
-        .wait{
+        .wait {
             padding-left: 0;
             padding-right: 0;
             padding-bottom: 0;
         }
-        .findBox{
+        .findBox {
             display: block;
             text-align: center;
         }
     }
-    .search{
+    .search {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        select{
+        select {
             margin: auto 3px;
         }
     }
@@ -34,6 +34,52 @@
             }
             .askBox {
                 width: 260%;
+            }
+        }
+    }
+    .half {
+        .half-title {
+            width: 100%;
+            display: inline-block;
+            align-items: center;
+        }
+        ul.half-list {
+            width: 300%;
+            position: absolute;
+            top: 15vh;
+            display: flex;
+            left: -100%;
+            height: 70vh;
+            li {
+                width: 100%;
+                .half-item {
+                    height: 100%;
+                    flex-direction: column;
+                    .half-pic {
+                        order: -1;
+                        width: 100%;
+                        height: 35vh;
+                    }
+                    .half-qty {
+                        width: 100%;
+                        height: 10vh;
+                        img{
+                            width: 35px;
+                            height: 48px;
+                        }
+                        span {
+                            align-self: center;
+                        }
+                    }
+                    .half-text {
+                        width: 100%;
+                        height: 25vh;
+                        .read-more {
+                            display: block;
+                            text-align: right;
+                        }
+                    }
+                }
             }
         }
     }
