--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -40,4 +40,32 @@
             width: 600%;
         }
     }
+    .noticegame {
+        // .boxcontainer {
+        //     width: 100%;
+        //     margin-top: 50px;
+        //     #rightbox,
+        //     #leftbox {
+        //         width: 45%;
+        //     }
+        // }
+        // .imgbox {
+        //     width: 100%;
+        //     margin: 0;
+        //     padding-top: 30px;
+        //     img {
+        //         width: 33.333%;
+        //     }
+        // }
+        .smallbox {
+            display: block;
+            margin-top: 60px;
+        }
+        .boxcontainer {
+            display: none;
+        }
+        .imgbox {
+            display: none;
+        }
+    }
 }
