--- a/css/index.css
+++ b/css/index.css
@@ -572,6 +572,34 @@ header.active {
   background-size: cover;
   height: 100vh;
   position: relative; }
+  .half #arrowLeft {
+    position: absolute;
+    top: 65vh;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.411);
+    color: #fff;
+    width: 50px;
+    height: 60px;
+    cursor: pointer;
+    text-align: center;
+    z-index: 666; }
+    .half #arrowLeft i {
+      position: relative;
+      top: 12px; }
+  .half #arrowRight {
+    position: absolute;
+    top: 65vh;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.411);
+    color: #fff;
+    width: 50px;
+    height: 60px;
+    cursor: pointer;
+    text-align: center;
+    z-index: 666; }
+    .half #arrowRight i {
+      position: relative;
+      top: 12px; }
   .half .half-title {
     height: 10vh;
     display: flex;
@@ -1094,7 +1122,6 @@ header.active {
     position: absolute;
     top: 15vh;
     display: flex;
-    left: -100%;
     height: 70vh; }
     .half ul.half-list li {
       width: 100%; }
