--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -617,6 +617,15 @@
             @extend %h3-btn;
         }
     }
+    .ask{
+        width: 30%;
+        margin: auto;
+        padding-right: 3%;
+            img {
+                width: 100%;
+                margin: auto;
+            }
+    }
     .boxcontainer {
         display: inline-flex;
         justify-content: space-around;
@@ -624,14 +633,14 @@
         width: 80%;
         #rightbox,
         #leftbox {
-            width: 40%;
+            width: 50%;
             img {
                 width: 100%;
             }
         }
         .centerbox {
             img {
-                width: 100%;
+                width: 70%;
             }
         }
     }
@@ -673,7 +682,7 @@
     }
     .imgbox {
         width: 80%;
-        margin: 30px auto 0 auto;
+        margin: 50px auto 0 auto;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
