--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -31,7 +31,7 @@
 
 .banner {
     height: 100vh;
-    background-image: url(../images/AdobeStock_112482963.jpeg);
+    background-image: url(../img/banner1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left center;
@@ -39,6 +39,7 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+    text-shadow:2px 2px 3px #333333;
     .findBox {
         display: flex;
         justify-content: center;
